--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
     },
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.3.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
+        "moment": "^2.29.4",
         "morgan": "^1.10.0",
         "openai": "^3.2.1"
     },
