--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "axios": "^1.3.6",
         "clsx": "^1.2.1",
+        "moment": "^2.29.4",
         "next": "^13.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -45,6 +47,7 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "eslint-plugin-unused-imports": "^2.0.0",
+        "http-proxy-middleware": "^2.0.6",
         "husky": "^7.0.4",
         "jest": "^27.5.1",
         "lint-staged": "^12.5.0",
