--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
+        "@trivago/prettier-plugin-sort-imports": "^4.1.1",
         "@types/react": "^18.0.35",
         "@types/react-speech-recognition": "^3.9.2",
         "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -54,7 +55,7 @@
         "next-router-mock": "^0.7.5",
         "next-sitemap": "^2.5.28",
         "postcss": "^8.4.21",
-        "prettier": "^2.8.7",
+        "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.3.1",
         "typescript": "^4.9.5"
